# lcore-indexer

./: .gitignore  Cargo.toml  Dockerfile  README.md  indexer.toml.example
migrations/: 001_initial_schema.sql
src/: api.rs  api_simple.rs  config.rs  error.rs  main.rs  main_simple.rs  models.rs
