[package]
name = "lcore-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lcore-indexer"
path = "src/main_simple.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Ethereum
ethers = { version = "2.0", features = ["ws", "rustls"] }
alloy-primitives = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
